:tada: Only build tests when COSMOSCOUT_UNIT_TESTS is enabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,4 +47,7 @@ source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES
 install(TARGETS   csp-atmospheres  DESTINATION "share/plugins")
 install(DIRECTORY "textures"       DESTINATION "share/resources")
 install(DIRECTORY "gui"            DESTINATION "share/resources")
-install(DIRECTORY "test/reference" DESTINATION "bin/test")
+
+if (COSMOSCOUT_UNIT_TESTS)
+  install(DIRECTORY "test/reference" DESTINATION "bin/test")
+endif()
